--- a/Lizzie WatchKit Extension/Info.plist
+++ b/Lizzie WatchKit Extension/Info.plist
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.curtischong.Lizzie.watchkitapp</string>
+			<string>com.curtischong.LizzieApp.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
